<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <TextView
       android:id="@+id/text1"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="@color/light_white"
       android:text="@string/cal"
       android:padding="10dp"
       android:textSize="30dp"
       android:gravity="end|bottom"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btn_7"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:onClick="onDigit"
          android:layout_weight="1"
          android:text="@string/num7"
          />
      <Button
          android:id="@+id/btn_8"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num8"
          />
      <Button
          android:id="@+id/btn_9"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num9"
          />
      <Button
          android:id="@+id/btn_divide"
          android:onClick="addop"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/divide"
          />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btn_4"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num4"
          />
      <Button
          android:id="@+id/btn_5"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num5"
          />
      <Button
          android:id="@+id/btn_6"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num6"
          />
      <Button
          android:id="@+id/btn_multyply"
          android:onClick="addop"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/multiply"
          />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btn_1"
          android:layout_margin="2dp"
          android:onClick="onDigit"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num1"
          />
      <Button
          android:id="@+id/btn_2"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num2"
          />
      <Button
          android:id="@+id/btn_3"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num3"
          />
      <Button
          android:id="@+id/btn_minus"
          android:onClick="addop"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/minus"
          />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >
      <Button
          android:id="@+id/btn_point"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:onClick="onDigitPoint"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/point"
          />
      <Button
          android:id="@+id/btn_0"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:onClick="onDigit"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/num0"
          />
      <Button
          android:id="@+id/btn_clr"
          android:layout_margin="2dp"
          android:onClick="onclean"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/CLR"
          />
      <Button
          android:id="@+id/btn_plus"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:onClick="addop"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/plus"
          />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btn_equl"
          android:layout_margin="2dp"
          android:layout_width="0dp"
          android:onClick="onequls"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:text="@string/equl"
          />
   </LinearLayout>

</LinearLayout>